--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^14.0.2",
     "next-themes": "^0.2.1",
     "socket.io-client": "^4.7.2",
-    "universal-cookie": "^6.1.1"
+    "universal-cookie": "^6.1.1",
+    "react-dom":"^18.2.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.5",    
