--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Un ejemplo practico utilizando componentes, para realizar un portafolio usando la tecnologia de Reflex( \"Web apps in pure Python\" )",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "export-sitemap": "next-sitemap",
+    "build": "next build",
+    "export": "next export -o _static"
   },
   "keywords": [],
   "author": "",
@@ -16,14 +19,15 @@
     "focus-visible": "^5.2.0",
     "json5": "^2.2.3",
     "next": "^14.0.2",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "socket.io-client": "^4.7.2",
-    "universal-cookie": "^6.1.1",
-    "react-dom":"^18.2.0",
-    "react":"^18.2.0"
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.5",    
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "tailwindcss": "^3.3.5"
   }
 }
